fixed cat error

--- a/iped-app/resources/config/conf/CategoriesConfig.json
+++ b/iped-app/resources/config/conf/CategoriesConfig.json
@@ -84,7 +84,7 @@
         "application/rdf+xml",
         "application/rss+xml",
         "application/x-nfe+xml",
-        "application/x-nfe+pdf"
+        "application/x-cte+xml"
       ]
     },
     {
